# TetrisSDL-c-

./: .gitignore  CMakeLists.txt
src/: app.cpp  main.cpp  shape_lines.cpp  tetromino.cpp  utils.cpp
src/render/: digit_draw.cpp  texture.cpp
